@@ -1,7 +1,7 @@
 module SitePrism::ElementChecker
   def all_there?
     Capybara.using_wait_time(0) do
-      self.class.element_names.all? {|element| send "has_#{element}?" }
+      self.class.mapped_items.all? {|element| send "has_#{element}?" }
     end
   end
 end
